--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "emsproject/wsgi.py",
@@ -8,23 +7,12 @@
                 "maxLambdaSize": "15mb",
                 "runtime": "python3.9"
             }
-        },
-        {
-            "src": "build_files.sh",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "staticfiles_build"
-            }
         }
     ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "emsproject/wsgi.py"
+            "dest": "emsprojecte/wsgi.py"
         }
     ]
 }
