--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [
         {
             "src": "emsproject/wsgi.py",
@@ -7,12 +8,23 @@
                 "maxLambdaSize": "15mb",
                 "runtime": "python3.9"
             }
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
+            }
         }
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
             "src": "/(.*)",
-            "dest": "emsprojecte/wsgi.py"
+            "dest": "emsproject/wsgi.py"
         }
     ]
 }
